welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: not found: type int
var nbPas:int = 0
          ^Variables:4: error: recursive variable nbPas needs type
  var nbPas = nbPas + 1
              ^Variables:7: error: not found: type int
var dejaFait:int = 0
             ^Variables:10: error: recursive variable dejaFait needs type
  var dejaFait = dejaFait +1
                 ^