welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:int = 0
while (estSurBiscuit() == false) {
  avance()
  var nbPas = nbPas + 1
}
prendBiscuit()
var dejaFait:int = 0
while (!dejaFait == nbPas) {
  recule()
  var dejaFait = dejaFait +1
}
poseBiscuit()